--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
         <div class="row">
             <div class="col-12 bg-white shadow border p-3 bg-opacity-75 rounded">
                 <h3 class="text-center text-primary text-opacity-75 mb-4"><i class="bi bi-clock-history"></i></i> CRONOLOGIA</h3>
+                <button type="button" class="btn btn-primary mx-4 float-start" id="svuota">SVUOTA</button>
 
-                <ul id="cronologia" class="list-group">
+                <ul id="cronologia" class="list-group me-4">
                 </ul>
             </div>
         </div>
