--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 
+    <!-- CRONOLOGIA -->
     <div class="container mt-4">
         <div class="row">
             <div class="col-12 bg-white shadow border p-3 bg-opacity-75 rounded">
